--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <h1>|| My <span>Experiance</span> ||</h1>
       </div>
       <div class="experiance-div">
-
+<!-- older one -->
         <div class="container">
           <div class="progress-card">
               <div class="circle-progress" data-percent="93">
@@ -385,6 +385,9 @@
               <p class="label">Project Management</p>
           </div>
       </div>
+      <!-- older one -->
+   
+    
       </div>
     </div>
 
