--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div id="card-image">
-                <img src="images/profile_pic-removebg-preview.png" alt="Profile Image" class="animate__animated animate__fadeInLeft">
+                <img src="images/profile_pic-removebg-preview.png" alt="Profile Image" class="animate__animated animate__fadeInLeft" id="animate">
             </div>
         </div>
 <!-- About Section -->
