--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       </div>
       <div class="experiance-div">
 <!-- older one -->
-        <div class="container">
+        <div class="container" data-aos="fade-up">
           <div class="progress-card">
               <div class="circle-progress" data-percent="93">
                   <svg class="progress-ring" width="120" height="120">
@@ -363,7 +363,7 @@
               <p class="label">Certura Company</p>
           </div>
   
-          <div class="progress-card">
+          <div class="progress-card" data-aos="fade-up">
               <div class="circle-progress" data-percent="79">
                   <svg class="progress-ring" width="120" height="120">
                       <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6" />
@@ -374,7 +374,7 @@
               <p class="label">Computer Knowledge</p>
           </div>
   
-          <div class="progress-card">
+          <div class="progress-card" data-aos="fade-up">
               <div class="circle-progress" data-percent="95">
                   <svg class="progress-ring" width="120" height="120">
                       <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6" />
