--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 </head>
 
 <body id="boddy">
+
+<!-- Loader -->
+<div id="loader">
+  <div class="spinner"></div>
+</div>
+
     <!-- Header -->
     <header>
         <nav>
