--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                <div id="profile-image">
                 <div id="circle-one"></div>
                     <div id="circle-two"></div>
-            <img src="images/my_-removebg-preview.png" alt="Profile Picture" class="head-img">
+            <img src="images/WhatsApp_Image_2025-05-01_at_02.25.41_9f8188e0-removebg-preview.png" alt="Profile Picture" class="head-img">
             
         </div>
         
