done with changes

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                   </svg>
                   <span class="percent">80%</span>
               </div>
-              <p class="label">Certura Company</p>
+              <p class="label">Certura Company intern</p>
           </div>
   
           <div class="progress-card" data-aos="fade-up">
@@ -407,7 +407,7 @@
                   </svg>
                   <span class="percent">85%</span>
               </div>
-              <p class="label">Code Alpha Company</p>
+              <p class="label">Code Alpha Company intern</p>
           </div>  
     </div>
 
