--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Cars-Website</h5>
                   <p class="card-text">I have made this Amazing car website using html,css,and bootstrap if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/cars-website/" id="a-tag">Visited it <i
@@ -168,7 +168,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">AI-Website</h5>
                   <p class="card-text">I have made this Amazing Ai website using html,css,and bootstrap if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/meta-Ai-project/" id="a-tag">Visited it <i
@@ -182,7 +182,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Wheather App</h5>
                   <p class="card-text">I have made this Amazing wheather app application using html,css,and bootstrap if you
-                    are instrusted to visited it so link is given below the Card..Thanks!</p>
+                    are interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/whether-application/" id="a-tag">Visited it <i
@@ -196,7 +196,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Netflix</h5>
                   <p class="card-text">I have made this Amazing Netflix clone using html,css,and bootstrap if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/Netflix-clone/" id="a-tag">Visited it <i
@@ -210,7 +210,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Food-panda</h5>
                   <p class="card-text">I have made this Amazing Food-panda website using html,css,and bootstrap if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href=" https://farhanbaber.github.io/food-panda/" id="a-tag">Visited it <i
@@ -224,7 +224,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Poket-Visa</h5>
                   <p class="card-text">I have made this Amazing Poket website using html,css,and bootstrap if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/poket-airline/" id="a-tag">Visited it <i
@@ -238,7 +238,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Password-Generator</h5>
                   <p class="card-text">I have made this Amazing Password-Generator using html,css,and Javascript if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>              
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/Password-generator/" id="a-tag">Visited it <i
@@ -253,7 +253,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Scramble-Game</h5>
                   <p class="card-text">I have made this Scramble-Game using html,css,and Javascript if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/scramble-game/" id="a-tag">Visited it <i
@@ -267,7 +267,7 @@
                 <div class="card-body" id="body-tag">
                   <h5 class="card-title" id="title">Calculator</h5>
                   <p class="card-text">I have made this Calculator using html,css,and Javascript if you are
-                    instrusted to visited it so link is given below the Card..Thanks!</p>
+                    interested to visited it so link is given below the Card..Thanks!</p>
                 </div>
                 <div class="card-body" id="body-tag">
                   <a href="https://farhanbaber.github.io/calculator/" id="a-tag">Visited it <i
