--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body id="boddy" style="margin:0;">
 
 <!-- Loader -->
-<!-- <div id="loader">
+<div id="loader">
   <div class="spinner"></div>
-</div> -->
+</div>
 
     <!-- Header -->
     <header>
