--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
 <body id="boddy" style="margin:0;">
 
 <!-- Loader -->
-<div id="loader">
+<!-- <div id="loader">
   <div class="spinner"></div>
-</div>
+</div> -->
+  <div id="loader">
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Farhan Baber Logo" />
+      <div class="animated-border"></div>
+    </div>
+  </div>
 
     <!-- Header -->
     <header>
