--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@
         <div class="sec-content">
             <h1>Frontend Developer</h1>
             <div class="para-div">
-            <p class="para-one">In my work, I leverage frameworks and libraries such as React, Vue.js, and Angular to streamline development processes and enhance functionality. I'm skilled in modern web design principles, ensuring that every project is both aesthetically pleasing and optimized for performance across devices.</p>
+            <p class="para-one">
+I build responsive, high-performance web apps with React, Vue.js, and Angular. With a focus on modern design, I ensure both functionality and aesthetics. I'm also becoming a professional software engineer.
+
+</p>
             </div>
             </p>
             <div class="btn-div">
 
-          <a href="images/Modern Minimalist CV Resume.png" download=""><button id="btn-three">Download CV</button></a>
+          <a href="images/cv.png" download=""><button id="btn-three">Download CV</button></a>
         </div>
     </div>
     </section>
