--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div> -->
   <div id="loader">
     <div class="logo-container">
-      <img src="images/logo.png" alt="Farhan Baber Logo" />
+      <img src="images/logo update.png" alt="Farhan Baber Logo" />
       <div class="animated-border"></div>
     </div>
   </div>
