--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li>Work</li>
                     </a>
                     <a href="#one">
-                        <img src="./images/logo.png" alt="" id="logo">
+                        <img src="images/logo update.png" alt="" id="logo">
                     </a>
                     <a href="#four">
                         <li>Skills</li>
