--- a/index.html
+++ b/index.html
@@ -317,12 +317,7 @@ I build responsive, high-performance web apps with React, Vue.js, and Angular al
                     <div class="progress" id="progress-line" style="width: 95%;">90%</div>
                 </div>
             </div>
-            <div class="skill">
-                <span class="skill-name">Bootstrap</span>
-                <div class="progress-bar" id="progress-div">
-                    <div class="progress"  id="progress-line" style="width: 90%;">90%</div>
-                </div>
-            </div>
+            
             <div class="skill">
                 <span class="skill-name">JavaScript</span>
                 <div class="progress-bar" id="progress-div">
@@ -347,36 +342,38 @@ I build responsive, high-performance web apps with React, Vue.js, and Angular al
         </div>
 
         <!-- Professional Skills Section -->
-        <div class="skills-section" data-aos="fade-up">
-            <h2 id="h2">Professional Skills</h2>
-            <div class="skill">
-                <span class="skill-name">Web Development</span>
-                <div class="progress-bar" id="progress-div">
-                    <div class="progress" id="progress-line" style="width: 81%;">81%</div>
-                </div>
-            </div>
-            <div class="skill">
-                <span class="skill-name">Figma Designing</span>
-                <div class="progress-bar" id="progress-div">
-                    <div class="progress"id="progress-line"  style="width: 90%;">90%</div>
-                </div>
-            </div>
-            <div class="skill">
-                <span class="skill-name">Graphic Designing</span>
-                <div class="progress-bar" id="progress-div">
-                    <div class="progress" id="progress-line" style="width: 85%;">85%</div>
-                </div>
-            </div>
-            <div class="skill">
-                <span class="skill-name" id="prog">Programming Languages (Phython, JavaScript)</span>
-                <div class="progress-bar" id="progress-div">
-                    <div class="progress"  id="progress-line" style="width: 78%;">78%</div>
-                </div>
-            </div>
+  <!-- SKILLS SECTION -->
+<div class="skills-section" data-aos="fade-up">
+    <h2 id="h2">Professional Skills</h2>
+
+    <div class="skill">
+        <span class="skill-name">Web Development</span>
+        <div class="progress-bar">
+            <div class="progress" style="width: 81%;">81%</div>
         </div>
     </div>
+
+    <div class="skill">
+        <span class="skill-name">Figma Designing</span>
+        <div class="progress-bar">
+            <div class="progress" style="width: 90%;">90%</div>
+        </div>
     </div>
-   </div>
+
+    <div class="skill">
+        <span class="skill-name">Graphic Designing</span>
+        <div class="progress-bar">
+            <div class="progress" style="width: 85%;">85%</div>
+        </div>
+    </div>
+
+    <div class="skill">
+        <span class="skill-name" id="prog">Programming Languages (Python, JavaScript)</span>
+        <div class="progress-bar">
+            <div class="progress" style="width: 78%;">78%</div>
+        </div>
+    </div>
+</div>
 
    <!-- Experiance Section -->
 
