--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
 <!-- Loader -->
 
-  <!-- <div id="loader">
+  <div id="loader">
     <div class="logo-container">
       <img src="images/logo update.png" alt="Farhan Baber Logo" />
       <div class="animated-border"></div>
     </div>
-  </div> -->
+  </div> 
 
     <!-- Header -->
     <header>
@@ -380,74 +380,52 @@ I build responsive, high-performance web apps with React, Vue.js, and Angular al
 
    <!-- ================= EXPERIENCE SECTION – FINAL CLEAN VERSION ================= -->
 <div class="fluid-container-four" data-aos="fade-up" id="five">
-  <div class="child-six">
+  <div class="child-five">
     <h1>| My <span id="h-type">Experience</span> |</h1>
+          <!-- <h1>| My <span id="h-type">Skills</span> |</h1> -->
+
+
   </div>
 
   <!-- Sirf ek hi grid div – no extra container, no duplicate cards -->
-  <div class="experience-grid">
+  <div class="container" data-aos="fade-up">
 
-    <!-- Card 1 -->
-    <div class="progress-card" data-percent="93">
-      <div class="circle-progress">
-        <svg class="progress-ring" width="130" height="130">
-          <circle class="track" cx="65" cy="65" r="58" stroke-width="9" />
-          <circle class="progress-stroke" cx="65" cy="65" r="58" stroke-width="9" />
-        </svg>
-        <span class="percent">93%</span>
-      </div>
-      <p class="label">Certura Company Intern</p>
+    <div class="progress-card">
+        <div class="circle-progress" data-percent="93">
+            <svg class="progress-ring" width="120" height="120">
+                <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6"></circle>
+                <circle class="progress-ring-circle progress" cx="60" cy="60" r="54" stroke-width="6"></circle>
+            </svg>
+            <span class="percent">80%</span>
+        </div>
+        <p class="label">Certura Company intern</p>
     </div>
 
-    <!-- Card 2 -->
-    <div class="progress-card" data-percent="79">
-      <div class="circle-progress">
-        <svg class="progress-ring" width="130" height="130">
-          <circle class="track" cx="65" cy="65" r="58" stroke-width="9" />
-          <circle class="progress-stroke" cx="65" cy="65" r="58" stroke-width="9" />
-        </svg>
-        <span class="percent">79%</span>
-      </div>
-      <p class="label">Computer Knowledge</p>
+    <div class="progress-card" data-aos="fade-up">
+        <div class="circle-progress" data-percent="79">
+            <svg class="progress-ring" width="120" height="120">
+                <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6"></circle>
+                <circle class="progress-ring-circle progress" cx="60" cy="60" r="54" stroke-width="6"></circle>
+            </svg>
+            <span class="percent">78%</span>
+        </div>
+        <p class="label">Computer Knowledge</p>
     </div>
 
-    <!-- Card 3 -->
-    <div class="progress-card" data-percent="95">
-      <div class="circle-progress">
-        <svg class="progress-ring" width="130" height="130">
-          <circle class="track" cx="65" cy="65" r="58" stroke-width="9" />
-          <circle class="progress-stroke" cx="65" cy="65" r="58" stroke-width="9" />
-        </svg>
-        <span class="percent">95%</span>
-      </div>
-      <p class="label">Project Management</p>
+    <div class="progress-card" data-aos="fade-up">
+        <div class="circle-progress" data-percent="95">
+            <svg class="progress-ring" width="120" height="120">
+                <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6"></circle>
+                <circle class="progress-ring-circle progress" cx="60" cy="60" r="54" stroke-width="6"></circle>
+            </svg>
+            <span class="percent">75%</span>
+        </div>
+        <p class="label">Project Management</p>
     </div>
 
-    <!-- Card 4 -->
-    <div class="progress-card" data-percent="88">
-      <div class="circle-progress">
-        <svg class="progress-ring" width="130" height="130">
-          <circle class="track" cx="65" cy="65" r="58" stroke-width="9" />
-          <circle class="progress-stroke" cx="65" cy="65" r="58" stroke-width="9" />
-        </svg>
-        <span class="percent">88%</span>
-      </div>
-      <p class="label">SMIT (IT Center)</p>
-    </div>
+</div>
 
-    <!-- Card 5 -->
-    <div class="progress-card" data-percent="85">
-      <div class="circle-progress">
-        <svg class="progress-ring" width="130" height="130">
-          <circle class="track" cx="65" cy="65" r="58" stroke-width="9" />
-          <circle class="progress-stroke" cx="65" cy="65" r="58" stroke-width="9" />
-        </svg>
-        <span class="percent">85%</span>
-      </div>
-      <p class="label">Code Alpha Intern</p>
-    </div>
 
-  </div>
 </div>
 <!-- Contact Section -->
 <div class="fluid-container-five"  id="six">
