--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ I build responsive, high-performance web apps with React, Vue.js, and Angular al
             </svg>
             <span class="percent">80%</span>
         </div>
-        <p class="label">Certura Company intern</p>
+        <p class="label">Smit (IT Center)</p>
     </div>
 
     <div class="progress-card" data-aos="fade-up">
@@ -421,6 +421,26 @@ I build responsive, high-performance web apps with React, Vue.js, and Angular al
             <span class="percent">75%</span>
         </div>
         <p class="label">Project Management</p>
+    </div>
+    <div class="progress-card" data-aos="fade-up">
+        <div class="circle-progress" data-percent="95">
+            <svg class="progress-ring" width="120" height="120">
+                <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6"></circle>
+                <circle class="progress-ring-circle progress" cx="60" cy="60" r="54" stroke-width="6"></circle>
+            </svg>
+            <span class="percent">75%</span>
+        </div>
+        <p class="label">Certura Company (Intern)</p>
+    </div>
+    <div class="progress-card" data-aos="fade-up">
+        <div class="circle-progress" data-percent="95">
+            <svg class="progress-ring" width="120" height="120">
+                <circle class="progress-ring-circle" cx="60" cy="60" r="54" stroke-width="6"></circle>
+                <circle class="progress-ring-circle progress" cx="60" cy="60" r="54" stroke-width="6"></circle>
+            </svg>
+            <span class="percent">75%</span>
+        </div>
+        <p class="label">Code Alpha Company (Intern)</p>
     </div>
 
 </div>
